# Air-UE-project

./: .gitignore  .gitmodules  README.md  run_engine.sh  settings.json
src/: .gitignore  requirements.txt
src/ros2/: .gitignore  README.md  check_agv_topics.sh  check_drone_topics.sh  note  start_agv_wrapper.sh  start_coordination.sh  start_drone_wrapper.sh  start_wrapper.sh
src/ros2/rviz/: agv.rviz  uav.rviz
src/ros2/src/agv_actor_sim/: AGV_Traj.yaml  README.md  package.xml  setup.cfg  setup.py
src/ros2/src/agv_actor_sim/agv_actor_sim/: agv_actor_node.py  agv_circle_node.py  agv_figure_eight_node.py  agv_imu_odom_node.py  agv_keyboard_teleop_node.py  agv_test_drive_node.py  agv_waypoint_cruise_node.py
src/ros2/src/agv_actor_sim/launch/: agv_actor_sim.launch.py  agv_circle.launch.py  agv_keyboard.launch.py  agv_waypoint_cruise.launch.py
src/ros2/src/airsim_ros_pkgs/include/: airsim_ros_wrapper.h
src/ros2/src/airsim_ros_pkgs/launch/: airsim_node.launch.py
src/ros2/src/airsim_ros_pkgs/src/: airsim_node.cpp  airsim_ros_wrapper.cpp
src/ros2/src/coordination/: AVOIDANCE_ALGORITHM.md  README.md  package.xml  setup.cfg  setup.py
src/ros2/src/coordination/coordination/: apf_escape.py  mpc_attitude_bridge_node.py  mpc_land_coordinator_node.py  uav_chase_agv_node.py  uav_follow_agv_node.py  uav_recovery_state_node.py  uav_with_rtl_node.py  uav_yoloe_test_node.py  ugv_then_uav_node.py  yoloe-position.py  yoloe_detector_node.py
src/ros2/src/coordination/launch/: agv_chase_demo.launch.py  coordination_demo.launch.py  coordination_rtl_demo.launch.py  mpc_landing_demo.launch.py  yoloe_test_demo.launch.py
src/ros2/src/navigation_bringup/: package.xml  setup.cfg  setup.py
src/ros2/src/navigation_bringup/config/: nav2_dwb_params.yaml  slam_toolbox.yaml
src/ros2/src/navigation_bringup/launch/: nav2_dwb.launch.py
src/ros2/src/navigation_bringup/navigation_bringup/: dwb_goal_path_node.py  lidar_self_filter_node.py  odom_qos_relay_node.py
src/ros2/src/uav_state_machine/: package.xml  setup.cfg  setup.py
src/ros2/src/uav_state_machine/launch/: uav_state_machine_with_mavros.launch.py
src/ros2/src/uav_state_machine/uav_state_machine/: pid.py  uav_state_machine_node.py  uav_state_machine_node.py.backup  vel_cmd_to_attitude_target.py  vel_cmd_to_position_target.py
src/ros2/tools/: check_tf_empty.py  dump_topic_raw.py
src/test/agv/: check_connection.py  drive_square.py  drive_waypoints.py  hello_agv.py  keyboard_agv.py  record_path.py  ros2_drive_test.py  waypoints.json
src/test/drone/: check_connection.py  fly_square.py  hello_drone.py  keyboard_drone.py  ros2_fly_test.py
tools/ue/: build_husky_actor.py
